<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_server_list"
    android:layout_width="480dip"
    android:layout_height="match_parent"
    android:minHeight="380dp"
    android:background="#f8f8f8">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/iosblue">

        <TextView
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:text="@string/activity_title_servicelist"
            />
        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            />
        <TextView
            android:id="@+id/add"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:text="@string/servicelist_add"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/list_head"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:layout_below="@+id/toolbar"
        android:background="#aaaaaa"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_weight="1.8"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:textStyle="bold"
            android:text="@string/servicelist_head_name"
            android:textSize="@dimen/nomal_edit_size"
            android:maxLines="1"
            android:layout_gravity="left|center" />

        <TextView
            android:id="@+id/ipAddress"
            android:layout_width="0dp"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_height="33dp"
            android:layout_weight="2.2"
            android:textStyle="bold"
            android:text="@string/servicelist_head_address"
            android:textSize="@dimen/nomal_edit_size"
            android:maxLines="1"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/port"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:maxLines="1"
            android:text="@string/servicelist_head_port"
            android:textSize="@dimen/nomal_edit_size"
            android:layout_gravity="right|center" />

    </LinearLayout>


    <ListView 
        android:id="@+id/serverList"
        android:layout_below="@+id/list_head"
        android:background="#f8f8f8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>
    

</RelativeLayout>
