<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_server_settings"
    android:background="#f8f8f8"
    android:layout_width="480dip"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f8f8f8"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/iosblue">

            <TextView
                android:id="@+id/title"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="18dp"
                android:textColor="#ffffff"
                android:text="@string/activity_title_servicesetting"
                />
            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loginInfoArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="35dp">

            <RelativeLayout
                android:id="@+id/nameArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|left"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/textclolr_title_gray"
                    android:textSize="@dimen/nomal_edit_size"
                    android:text="@string/servicesetting_name" />

                <EditText
                    android:id="@+id/name_content"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|left"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/textclolr_title_gray"
                    android:background="#00000000"
                    android:textSize="@dimen/nomal_edit_size"
                    android:layout_toRightOf="@id/name_title" />
            </RelativeLayout>

            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/nameArea"
                android:background="#dcdcdc" />

            <RelativeLayout
                android:id="@+id/patternArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/v1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/pattern_title"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|left"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/textclolr_title_gray"
                    android:textSize="@dimen/nomal_edit_size"
                    android:text="@string/servicesetting_pattern" />

                <CheckBox
                    android:id="@+id/ipcheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/pattern_title"
                    android:checked="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/textclolr_title_gray"
                    android:textSize="@dimen/nomal_edit_size"
                    android:layout_marginLeft="15dp"
                    android:text="@string/servicesetting_ip" />

                <CheckBox
                    android:id="@+id/remoteagentcheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ipcheck"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/nomal_edit_size"
                    android:textColor="@color/textclolr_title_gray"
                    android:layout_marginLeft="30dp"
                    android:text="@string/servicesetting_agent" />
            </RelativeLayout>

            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/patternArea"
                android:background="#dcdcdc" />

            <RelativeLayout
                android:id="@+id/ipAddressArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/v2"
                android:background="#f8f8f8"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/ipAddress_title"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|left"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/textclolr_title_gray"
                    android:textSize="@dimen/nomal_edit_size"
                    android:text="@string/servicesetting_address" />

                <EditText
                    android:id="@+id/ipAddress_content"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|left"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/textclolr_title_gray"
                    android:background="#00000000"
                    android:textSize="@dimen/nomal_edit_size"
                    android:layout_toRightOf="@id/ipAddress_title" />
            </RelativeLayout>

            <View
                android:id="@+id/v3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/ipAddressArea"
                android:background="#dcdcdc" />

            <RelativeLayout
                android:id="@+id/portArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/v3"
                android:background="#f8f8f8"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/port_title"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|left"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/textclolr_title_gray"
                    android:textSize="@dimen/nomal_edit_size"
                    android:text="@string/servicesetting_port" />

                <EditText
                    android:id="@+id/port_content"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|left"
                    android:layout_marginLeft="15dp"
                    android:inputType="number"
                    android:textColor="@color/textclolr_title_gray"
                    android:background="#00000000"
                    android:textSize="@dimen/nomal_edit_size"
                    android:layout_toRightOf="@id/port_title" />
            </RelativeLayout>

            <View
                android:id="@+id/v4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/portArea"
                android:background="#dcdcdc" />
        </RelativeLayout>

        <intersky.mywidget.TextButton
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/button_word_ok"
            android_custom:shapeColor="blue"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#00000000"
            />
    </LinearLayout>

</ScrollView>